cabal-version:      2.4
name:               moai
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            NONE
author:             Evan-Hock
maintainer:         mocaointegral@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md


common exts
    default-extensions:
        NamedFieldPuns,
        OverloadedRecordDot,
        RecordWildCards,
        DuplicateRecordFields


library
    import: exts
    hs-source-dirs: lib
    exposed-modules:
        Moai.AST,
        Moai.AST.Evaluator

    build-depends:
        array,
        unordered-containers,
        transformers

    default-language: Haskell2010


executable moai
    main-is: Main.hs
    build-depends: base ^>=4.16.4.0
    hs-source-dirs: app
    default-language: Haskell2010
