cabal-version:      2.4
name:               moai
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            NONE
author:             Evan-Hock
maintainer:         mocaointegral@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md


common warnings
    ghc-options: -Wall


common exts
    default-extensions:
        NamedFieldPuns,
        RecordWildCards,
        DuplicateRecordFields


library
    import:
        exts,
        warnings

    hs-source-dirs: lib
    exposed-modules:
        Moai.Tokenizer

    build-depends:
        array,
        base,
        bytestring
    
    build-tool-depends:
        alex:alex

    default-language: Haskell2010


executable scan
    import:
        exts,
        warnings

    main-is: scan.hs
    build-depends:
        base >= 4.13.0.0,
        bytestring,
        moai

    hs-source-dirs: testing
    default-language: Haskell2010
